# Lab3_SysProg

./: CMakeLists.txt  finite_automaton.cpp  input.txt  lexical_analyzer.h  main.cpp  regex_analyzer.cpp
Tests/: test.cpp
